--- a/shell/src/styles.scss
+++ b/shell/src/styles.scss
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 iframe {
   width: 100%;
+  height: 900px;
   border-style:  none;
   display: none;
   &.shown {
