Style nav toolbar on shell app

--- a/shell/src/app/header/header.component.html
+++ b/shell/src/app/header/header.component.html
@@ -1,3 +1,5 @@
+<mat-toolbar>
 <div *ngFor="let app of appsMenu">
   <a href="{{app.appName}}" (click)="navigationOccured($event)">{{app.appName}}</a>
 </div>
+</mat-toolbar>
