--- a/micro-apps/games/src/app/games-table/game-details/game-details.component.html
+++ b/micro-apps/games/src/app/games-table/game-details/game-details.component.html
@@ -1,40 +1,37 @@
 <div>
   <div>
 
-      <mat-select #group1 placeholder="Team A" [(ngModel)]="game.group1">
-        <mat-option *ngFor="let group of groups" [value]="group">
-          {{group.name}}
-        </mat-option>
-      </mat-select>
+    <mat-select #group1 placeholder="Team A" [(ngModel)]="game.group1">
+      <mat-option *ngFor="let group of groups" [value]="group">
+        {{group.name}}
+      </mat-option>
+    </mat-select>
 
   </div>
   <div>
 
-      <mat-select placeholder="Team B" [(ngModel)]="game.group2.id" *ngIf="game && game.group2">
-        <mat-option *ngFor="let group of groups" [value]="group.id">
-          {{group.name}}
-        </mat-option>
-      </mat-select>
+    <mat-select placeholder="Team B" [(ngModel)]="game.group2" *ngIf="game && game.group2">
+      <mat-option *ngFor="let group of groups" [value]="group">
+        {{group.name}}
+      </mat-option>
+    </mat-select>
   </div>
   <div>
-    <label>
-      Time
-      <input [matDatepicker]="gameDatePicker" [(ngModel)]="game.date">
+      <input matInput [matDatepicker]="gameDatePicker" [(ngModel)]="game.date">
       <mat-datepicker-toggle matSuffix [for]="gameDatePicker"></mat-datepicker-toggle>
       <mat-datepicker #gameDatePicker></mat-datepicker>
-    </label>
   </div>
   <div>
-    <label>Score A
-      <input type="number" [(ngModel)]="game.score1">
-    </label>
+
+      <input type="number" matInput placeholder="Score A" [(ngModel)]="game.score1">
   </div>
 
   <div>
 
-    <label>Score B
-      <input type="number" [(ngModel)]="game.score2">
-    </label>
+
+      <input type="number" matInput [(ngModel)]="game.score2">
+
+
   </div>
   <div>
     <button (click)="saveGameClick()">Save</button>
