--- a/micro-apps/teamsDetails/src/app/app.component.html
+++ b/micro-apps/teamsDetails/src/app/app.component.html
@@ -3,7 +3,11 @@
 </mat-toolbar>
 
 <div>
-  <div fxFlexOffset.gt-sm="15%" fxFlex.gt-sm="70%">
-      <router-outlet></router-outlet>
+  <div fxFlexOffset.gt-sm="15%" fxFlex.gt-sm="70%" style="    display: flex;">
+
+    <div class="sidebar">
+      <app-teams-list></app-teams-list>
+    </div>
+    <router-outlet></router-outlet>
   </div>
 </div>
