--- a/micro-apps/teamsDetails/src/app/team/team-view/team-view.component.html
+++ b/micro-apps/teamsDetails/src/app/team/team-view/team-view.component.html
@@ -4,6 +4,6 @@
     <img src={{(team)?.flag}}/>
   </div>
   <div class="content">
-      <ul><li *ngFor="let player of (team)?.players">{{player}}</li></ul>
+      <ul *ngIf = "team"><li *ngFor="let player of (team)?.players">{{player}}</li></ul>
   </div>
 </div>
