--- a/shell/src/app/header/header.component.html
+++ b/shell/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar>
+<mat-toolbar color="primary">
 <div *ngFor="let app of appsMenu">
   <a href="{{app.appName}}" (click)="navigationOccured($event)">{{app.appName}}</a>
 </div>
