Change header menu to present titles

--- a/shell/src/app/header/header.component.html
+++ b/shell/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
 <div *ngFor="let app of appsMenu">
-  <a href="{{app.appName}}" (click)="navigationOccured($event)">{{app.appName}}</a>
+  <a href="{{app.appName}}" (click)="navigationOccured($event)">{{app.title}}</a>
 </div>
 </mat-toolbar>
