Remove the view team header

--- a/micro-apps/teamsDetails/src/app/app.component.html
+++ b/micro-apps/teamsDetails/src/app/app.component.html
@@ -1,9 +1,9 @@
-<mat-toolbar color="primary">
-  <span>view Team</span>
-</mat-toolbar>
+<!--<mat-toolbar color="primary">-->
+  <!--<span>view Team</span>-->
+<!--</mat-toolbar>-->
 
 <div>
-  <div fxFlexOffset.gt-sm="15%" fxFlex.gt-sm="70%" style="    display: flex;">
+  <div fxFlexOffset.gt-sm="0%" fxFlex.gt-sm="100%" style="    display: flex;">
 
     <div class="sidebar">
       <app-teams-list></app-teams-list>
